[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/dogicapixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/TextboxTemplates/SelectableOption.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://UI/TextBoxes.gd" type="Script" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded;

uniform int blurSize : hint_range(0,20);

void fragment()
{
COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, float(blurSize)/10.0);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/blurSize = 20

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 1 )

[node name="TextBoxes" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 2 )
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 96.0
margin_right = 320.0
margin_bottom = 184.0
color = Color( 0.133333, 0.133333, 0.133333, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_top = 80.0
margin_right = 128.0
margin_bottom = 96.0
color = Color( 0.133333, 0.133333, 0.133333, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_top = 80.0
margin_right = 128.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 3 )
text = "..."
align = 3
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wOptions" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="wOptions"]
margin_left = 4.0
margin_top = 100.0
margin_right = 316.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="wOptions/MarginContainer"]
margin_right = 312.0
margin_bottom = 80.0

[node name="Text" type="Label" parent="wOptions/MarginContainer/HBoxContainer"]
margin_right = 216.0
margin_bottom = 80.0
rect_min_size = Vector2( 216, 80 )
custom_fonts/font = SubResource( 3 )
align = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" type="VBoxContainer" parent="wOptions/MarginContainer/HBoxContainer"]
margin_left = 220.0
margin_right = 220.0
margin_bottom = 80.0

[node name="SelectableOption" parent="wOptions/MarginContainer/HBoxContainer/OptionsMenu" instance=ExtResource( 2 )]
visible = false
text = "DIALOG_LATER"

[node name="SelectableOption2" parent="wOptions/MarginContainer/HBoxContainer/OptionsMenu" instance=ExtResource( 2 )]
visible = false
text = "DIALOG_CONFIRMAR"

[node name="SelectableOption3" parent="wOptions/MarginContainer/HBoxContainer/OptionsMenu" instance=ExtResource( 2 )]
visible = false
text = "DIALOG_DOUBT"

[node name="SelectableOption4" parent="wOptions/MarginContainer/HBoxContainer/OptionsMenu" instance=ExtResource( 2 )]
visible = false
text = "DIALOG_LIE"

[node name="Normal" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Normal"]
margin_left = 4.0
margin_top = 100.0
margin_right = 316.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Normal/MarginContainer"]
margin_right = 312.0
margin_bottom = 80.0
rect_min_size = Vector2( 312, 80 )
custom_fonts/font = SubResource( 3 )
autowrap = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
[connection signal="timeout" from="Timer" to="." method="_add_letter"]
